--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title></title>
+        <title>Lab 6 Interface</title>
         <link href="styles.css" rel="stylesheet">
     </head>
     <body>
+        <div id="app">
+           <!-- Header -->
 
 
+            <!-- Header End -->
 
-        
+            
+
+        </div>
         <script src="java.js"></script>
     </body>
 </html>
