First edition of header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <body>
         <div id="app">
            <!-- Header -->
+           <div id="header">
+               <div id="small_cont">
+                   <div id="small-box"></div>
+                </div>
+           </div>
 
 
             <!-- Header End -->
