--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 
          
          <!-- Footer -->
-
+            <div id="footer">
+                <div id="left"></div>
+                <div id="left2"></div>
+            </div>
 
         <!-- Footer End -->
 
