Modified Index.html + styles.css

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
          </div>
 
 
-         <div id="right_top"></div>
-         <div id="right_bottom"></div>
+         <div class ="rightmenu" id="right_top"></div>
+         <div class = "rightmenu" id="right_bottom"></div>
          
          
          <!-- Menu End -->
