Modified java.js, index.html + styles.css

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
 
          <!-- Menu  -->
-         <div id="leftmenu">
+         <div id="leftmenu" onclick="expandLeft()">
         <div class = "content" id="avatar"></div>
         <div class = "content" id="logout"></div>
          </div>
 
 
          <div class ="rightmenu" id="right_top"></div>
-         <div class = "rightmenu" id="right_bottom"></div>
+         <div  class = "rightmenu" id="right_bottom"></div>
          
          
          <!-- Menu End -->
